# Adversarial-Robustness-of-Medical-Models-in-Telemedicine

./: .gitignore  README.md  pyproject.toml  simulation.py
agents/: __init__.py  attacker_pair.py  defender.py  goals.py  judge.py  llm.py  reward.py  target.py
agents/attacks/: __init__.py  base.py  pair.py  proattack.py  rl_bandit.py  signature.py
analysis/: __init__.py  merge.py  plots.py
config/: config.yml  prompts.yml  rails.co
docs/: 01-architecture.md  02-game-theory.md  03-attacks.md  04-defense.md  05-experiments.md  README.md
notebooks/Attack/: PAIR_Attack_Enhanced.ipynb  ProAttack_Saad.ipynb  RL_Attack_PAIR.ipynb  data_poisoning_medgema.ipynb  medgemma-PAIR_attack.ipynb  signature_guided_adversarial_attack.ipynb
notebooks/Defense/KnowldgeGraph/: Building the Knowledge Graph .ipynb  Final Integration.ipynb  Implementation.ipynb  Validation of KG Verifier.ipynb
notebooks/Defense/RPO/: RPO_Defense.ipynb  rpo_defense_4.py
notebooks/Defense/TinnyLamma/: DataLab_BlueTeam.ipynb  Def&Eval_BlueTeam.ipynb  TrainingLab_BlueTeam.ipynb
notebooks/Defense/privacyShield/: Advanced Privacy Shield.ipynb  (+4 more)
results/: .eval_status  README.md  _smoke.json  eval_all_20260722.json  run_20260724_fullab_defended.json  run_20260724_fullab_defended_s0.json  run_20260724_fullab_defended_s1.json  run_20260724_fullab_undefended.json  run_20260724_fullab_undefended_s0.json  run_20260724_fullab_undefended_s1.json
scripts/: ab_benchmark.sh  benchmark.sh  full_run.sh  preflight.sh
static/: response_example.md
tests/: malicious.py  test2.py  test_markov_game.py  tests.py
(+1 files in other folders)
